--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Copyright by KhanhBui-D25-F320</title>
+    <title>Copyright by KhanhBui-D25-F320. Công cụ quản lí - hiệp đồng VT</title>
     <script>
       (function() {
         if (!process.env.HOT) {
@@ -19,6 +19,7 @@
     <div id="root"></div>
     <script>
       {
+        require('./renderer.js');
         const scripts = [];
 
         // Dynamically insert the DLL script in development env in the
