--- a/app/app.html
+++ b/app/app.html
@@ -19,9 +19,8 @@
     <div id="root"></div>
     <script>
       {
-        require('./renderer.js');
         const scripts = [];
-
+        scripts.push('./server.js');
         // Dynamically insert the DLL script in development env in the
         // renderer process
         if (process.env.NODE_ENV === 'development') {
@@ -30,12 +29,11 @@
 
         // Dynamically insert the bundled app script in the renderer process
         const port = process.env.PORT || 1212;
-        scripts.push(
+        scripts.push( 
           process.env.HOT
             ? 'http://localhost:' + port + '/dist/renderer.dev.js'
             : './dist/renderer.prod.js'
-        );
-
+        ); 
         document.write(
           scripts
             .map(script => `<script defer src="${script}"><\/script>`)
